# wasim

./: .gitignore  BRIEF_schema_mods_for_builtins.md  DISTRIBUTION_PARAM_FORMULA.md  DURATION_ZERO_FINDING.md  EMITTER_HANDOFF.md  EMIT_ISSUES_0.9.1_CORPUS.md  EMIT_PATHOLOGIES_0.9.7_CORPUS.md  EMIT_PATHOLOGIES_0.9.7_ENGINE_REPLY.md  EMIT_PATHOLOGIES_0.9.7_ENGINE_REPLY_R2.md  EMIT_PATHOLOGIES_0.9.7_ENGINE_REPLY_R3.md  FEATURES_AND_USE_CASES.md  GOLDSIM_ENGINE_GAP_ANALYSIS.md  HAUL_FLEET_MODEL_SPEC.md  README.md  SENSITIVITY_ANALYSIS_SPEC.md  SUBMODEL_EXECUTION_FINDINGS.md  SUBMODEL_INTERFACE_INPUT_BINDING.md  SUBMODEL_STAT_ENCODING.md  WASIM_ARRAY_COMPREHENSION_GAP.md  WASIM_AUTHORING_ENVIRONMENT_SPEC.md  WASIM_OPTIMIZATION_PROPOSAL.md  WASIM_SCHEMA_ADDITIONS.md  WORKPLAN_FLEET_INSTANCING.md  WORKPLAN_TIER_A.md  WORKPLAN_TIER_B.md  WORKPLAN_TIER_C.md  math_compare.md  notes_to_transpiler.md  oldmodel.schema.json  schema_examples
engine/: Cargo.toml  V2_SCOPING.md  build-wasm.sh
engine/src/: engine.rs  engine_v2.rs  error.rs  eval.rs  eval_harness.rs  graph.rs  graph_v2.rs  lib.rs  model.rs  model_v2.rs  optimize_v2.rs  params.rs  results_spec.rs  sampling.rs  sensitivity_v2.rs  submodel_v2.rs  summary.rs  timebase.rs  units.rs  v1_import.rs  v2_parse.rs  wasm.rs
engine/tests/: authoring_scaffolds.rs  builtins_v2.rs  calendar_v2.rs  cell_concentration_v2.rs  cell_fluxes_v2.rs  cells_v2.rs  convolution_expr_v2.rs  discrete_nodes_v2.rs  distributions_roster_v2.rs  distributions_v2.rs  dynamic_optimization_v2.rs  engine_v2.rs  engine_v2_rules.rs  events_v2.rs  flip_v2.rs  (+37 more)
(+70 files in other folders)
