[package]
name = "wasim-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
thiserror = "1"

wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# getrandom must opt into JS entropy source on wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
glob = "0.3"

# wasm-opt (binaryen) is disabled: the build environment can't fetch the binaryen
# release, and the unoptimized module is fine for local/dev authoring use.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
